syntax = "proto3";
package pb;
option go_package="services/storage/pb";

service Storage {
    rpc Size(GetSizeRequest) returns (GetSizeResponse) {}
    rpc GetItem(GetItemRequest) returns (GetItemResponse) {}
    rpc ReloadDb(ReloadDbRequest) returns (ReloadDbResponse) {}
}

message GetSizeRequest {
}

message GetSizeResponse {
  int64 size = 1;
  string err = 2;
}

message GetItemRequest {
  string id = 1;
}

message GetItemResponse {
  string id = 1;
  float price = 2;
  string expiration_date = 3;
  string err = 4;
}

message ReloadDbRequest {
  string path = 1;
}

message ReloadDbResponse {
  string err = 1;
}
